argo/fauli-apps/collab-synth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collab-synth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collab-synth
  template:
    metadata:
      labels:
        app: collab-synth
    spec:
      containers:
      - name: app
        image: fauli/collab-synth:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
