argo/fauli-apps/collab-synth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collab-synth
spec:
  selector:
    app: collab-synth
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
