argo/fauli-apps/collab-synth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collab-synth-ingress
spec:
  rules:
  - host: collab-synth.gute-idee.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: collab-synth
            port:
              number: 8080
  tls:
  - hosts:
    - collab-synth.gute-idee.me
    secretName: origin-cert  # Secret for storing SSL certificate
